--- a/app/views/status-bar.html
+++ b/app/views/status-bar.html
@@ -1,7 +1,13 @@
 <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-8">
-
+    <div class="information">
+      {{information}}
+    </div>
   </div>
   <div class="col-xs-6 col-md-4">
+  <div class="buttons">
+    <button type="button" class="btn btn-primary btn-lg" ng-click="hit()" ng-disabled="buttonsDisabled">Hit</button>
+    <button type="button" class="btn btn-default btn-lg" ng-click="stay()" ng-disabled="buttonsDisabled">Stay</button>
+  </div>
   </div>
 </div>
