--- a/app/views/table.html
+++ b/app/views/table.html
@@ -1,28 +1,5 @@
-<div class="row">
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
-  </div>
-  <div class="col-md-3">
-    <player-information></player-information>
+<div class="row" ng-repeat="i in range(1,seatCount/3)">
+  <div class="col-md-4" ng-repeat="n in range(((i-1)*(seatCount/3))+1,Math.min(((i-1)*(seatCount/3))+3, seatCount))">
+    <player-information player="game.getPlayerAtSeat(n-1)"></player-information>
   </div>
 </div>
